--- a/Opdracht HTML CSS KoRn/style.css
+++ b/Opdracht HTML CSS KoRn/style.css
@@ -115,7 +115,7 @@ ion-icon:hover {
 .index-wrapper {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 25% 70% 5%;
+  grid-template-rows: 200px 1fr 100px;
   grid-template-areas:
     "header"
     "main"
