--- a/Opdracht HTML CSS KoRn/style.css
+++ b/Opdracht HTML CSS KoRn/style.css
@@ -1,4 +1,4 @@
-* {
+* body {
   box-sizing: relative;
 }
 
@@ -9,8 +9,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  display: inline-block;
-  position: relative;
   min-width: 100%;
   min-height: 100vh;
   margin: 0;
@@ -24,16 +22,14 @@ header {
   font-family: "Bebas Neue";
   width: 100%;
   height: 100%;
-  background-size: cover;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: auto;
-  padding-left: 30px;
   padding-right: 30px;
+  padding-left: 30px;
 }
 
 h1 {
@@ -62,6 +58,25 @@ section {
 .grouppic {
   width: 300px;
   height: 165px;
+  margin-top: 50px;
+}
+
+.iframe-container {
+  position: relative;
+  display: inline-block;
+  width: 70%;
+  padding-bottom: 56.25%;
+  height: 0;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .button {
@@ -71,14 +86,16 @@ section {
   color: white;
   font-family: "Bebas Neue";
   text-decoration: none;
+  font-size: 1rem;
 }
 
 form {
   color: rgb(237, 171, 171);
   font-family: "Barlow Condensed", sans-serif;
-  box-sizing: border-box;
+  box-sizing: relative;
   width: 200px;
-  padding: 20px;
+  margin-top: 50px;
+  font-size: 1rem;
 }
 
 .form-center {
@@ -87,8 +104,7 @@ form {
 }
 
 footer {
-  position: relative;
-  padding: 30px 0px 0px 0px;
+  margin-top: 30px;
 }
 
 ion-icon {
@@ -115,40 +131,11 @@ ion-icon:hover {
 .index-wrapper {
   display: grid;
   grid-template-columns: auto;
-  grid-template-rows: 200px 1fr 100px;
+  grid-template-rows: 110px 1fr 50px;
   grid-template-areas:
     "header"
     "main"
     "footer";
-}
-
-.members-wrapper {
-  display: grid;
-  grid-template-columns: 150px;
-  grid-template-rows: repeat (10, 1fr);
-  justify-content: center;
-  grid-template-areas:
-    "1"
-    "2"
-    "3"
-    "4"
-    "5"
-    "6"
-    "7"
-    "8"
-    "9"
-    "10";
-  margin-bottom: 30px;
-}
-
-.album-wrapper {
-  display: grid;
-  place-items: center;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(11, 1fr);
-  margin-top: 50px;
-  row-gap: 10px;
-  margin-bottom: 30px;
 }
 
 header {
@@ -161,45 +148,116 @@ footer {
   grid-area: footer;
 }
 
-#jonathan {
-  grid-area: 1;
-}
-#munky {
-  grid-area: 3;
-}
-#head {
-  grid-area: 5;
-}
-#fieldy {
-  grid-area: 7;
-}
-#ray {
-  grid-area: 8;
+.members-wrapper {
+  display: grid;
+  grid-template-columns: 150px;
+  grid-template-rows: repeat (10, 1fr);
+  justify-content: center;
+  margin-bottom: 30px;
 }
 
-#p-jonathan {
-  grid-area: 2;
-}
-#p-munky {
-  grid-area: 4;
-}
-#p-head {
-  grid-area: 6;
-}
-#p-fieldy {
-  grid-area: 8;
-}
-#p-ray {
-  grid-area: 10;
+.grid-item {
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
-@media only screen and (min-width: 100px) {
+.album-wrapper {
+  display: grid;
+  place-items: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(13, 1fr);
+  margin-top: 50px;
+  row-gap: 10px;
+  margin-bottom: 30px;
+}
+
+@media only screen and (min-width: 1000px) {
+  .index-wrapper {
+    grid-template-rows: 200px 1fr 100px;
+  }
+
   h1 {
     font-size: 2.8rem;
     letter-spacing: 0.3em;
+    padding-left: 120px;
   }
 
   li a {
     font-size: 2rem;
+  }
+
+  .main-text {
+    margin: 80px 300px 60px 300px;
+    font-size: 2rem;
+  }
+
+  .member-info {
+    font-size: 1.5rem;
+  }
+
+  .button {
+    font-size: 2rem;
+  }
+
+  form {
+    font-size: 1.3rem;
+  }
+
+  .grouppic {
+    width: 600px;
+    height: 330px;
+    margin-top: 50px;
+  }
+
+  .iframe-container {
+    margin-top: 150px;
+  }
+
+  .members-img {
+    height: 350px;
+    width: 350px;
+    border-radius: 50%;
+  }
+
+  .members-wrapper {
+    display: grid;
+    grid-template-columns: 400px 400px;
+    grid-template-rows: repeat(5, 1fr);
+    justify-content: center;
+  }
+
+  .grid-item {
+    display: grid;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .member-info p {
+    max-width: 350px;
+  }
+
+  .album-wrapper {
+    display: grid;
+    grid-template-columns: repeat(5, 200px);
+    grid-template-rows: repeat(4, 200px);
+    grid-gap: 0;
+    justify-content: center;
+    margin-top: 150px;
+    margin-bottom: 50px;
+  }
+
+  #large1 {
+    grid-column: span 2;
+    grid-row: span 2;
+    width: 400px;
+    height: 400px;
+  }
+
+  #large2 {
+    grid-column: 4 / span 2;
+    grid-row: 2 / span 2;
+    width: 400px;
+    height: 400px;
   }
 }
